<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pulse-Manager</string>
    <string name="common_closeButton">@android:string/cancel</string>
    <string name="common_okButton">@android:string/ok</string>
    <string name="common_cancelButton">Отмена</string>
    <string name="error_networkErrorMessage">Ошибка соединения</string>
    <string name="error_errorGettingData">Ошибка получения данных</string>
    <string name="error_serverNotResponding">Сервер не отвечает</string>
    <string name="menuTitleMain">Главная</string>
    <string name="menuTitleCategories">Каталог</string>
    <string name="menuTitleChat">Чат</string>
    <string name="menuTitleProfile">Профиль</string>
    <string name="welcomeBackAuth">С возвращением!</string>
    <string name="pleaseAuth">Что бы войти в систему, введите зарегестрированный адрес электронной почты</string>
    <string name="emailHintAuth">Email</string>
    <string name="signIn">Войти</string>
    <string name="password">Password</string>
    <string name="chatMessageFieldHint">Что Вас волнует?</string>
    <string name="readDateHolder">Прочитано %s</string>
    <string name="sendPhotoGallery">Галерея</string>
    <string name="sendPhotoCamera">Камера</string>
    <string name="sendPhotoError">Произошла ошибка добавления изображения</string>
    <string name="cameraPermissionRationaleMessageChat">Разрешение на доступ к камере необходимо для отправки изображений в чат</string>
    <string name="cameraPermissionPermanentlyDenied">Доступ к камере запрещен. Пожалуйста, перейдите в настройки в раздел Разрешения и предоставьте приложению доступ к камере</string>
    <string name="permissionDialogSettingsButton">Настройки</string>
    <string name="permissionDialogCancel">Отмена</string>
    <string name="cameraPermissionDenied">Доступ к камере запрещен</string>
    <string name="cameraPermissionNoCameraOnDevice">На устройстве отсутствует камера</string>
    <string name="statisticTitle">Статистика</string>
    <string name="notificationTitle">Уведомления</string>
    <string name="aboutAppTitle">О приложении</string>
    <string name="helpTitle">Нужна помощь?</string>
    <string name="accountLogoutTitle">Выйти из аккаунта</string>
    <string name="areYouSureWantExit">Вы уверены, что хотите выйти из приложения?</string>
    <string name="logoutDescription">"до тех пор пока не авторизирутесь снова"</string>
    <string name="logout">Выйти</string>
    <string name="ratingHolder">%.2f ⭐</string>
    <string name="pushNotifications">Push уведомления</string>
    <string name="emailDistribution">Email рассылка</string>
    <string name="newChatRequest">Новый запрос в чате</string>
    <string name="ratingUpdate">Обновление рейтинга</string>
    <string name="userAgreement">Пользовательское соглашение</string>
    <string name="privacyPolicy">О Персональных данных</string>
    <string name="termsAndConditions">Условия использования данных</string>
    <string name="cashback">Про кешбек</string>
    <string name="versionHolder">Версия %s</string>
    <string name="startSearching">Начните поиск</string>
    <string name="searchHintHome">Ношпа</string>
    <string name="recentlyRecommended">Вы недавно рекомендовали</string>
    <string name="willBeSoon">Ожидается в разработке</string>
    <string name="newRequests">Новых запросов</string>
    <string name="qrCodeLabel">Штрих код</string>
    <string name="cameraPermissionRationaleMessage">Разрешение на доступ к камере необходимо для сканирования QR кода</string>
    <string name="grantPermissionButton">Разрешить</string>
    <string name="closeButton">Закрыть</string>
    <string name="qrCodeDescription">Наведите камеру на штрих-код, что бы найти его в приложении</string>
    <string name="understandScan">Понятно! Сканировать</string>
    <string name="pointToBarcode">Наведите на штрих код</string>
    <string name="qrCodeDescriptionTop">Наведите камеру на штрих-код так, что бы он оказалася внутри прямоугольной области.</string>
    <string name="qrCodeDescriptionBottom">Сканер автоматически считает штрих-код и найдет товар, если он присутсвует в нашей сети.</string>
    <string name="qrCodeScannerError">Произошла ошибка сканирования кода</string>
    <string name="cameraIconContentDescription">Иконка камеры</string>
    <string name="temporaryUnavailable">Временно не доступен</string>
    <string name="to">до </string>
    <string name="from">от </string>
    <string name="price">%1$s ₸</string>
    <string name="manufacture">Производитель, %1$s</string>
    <string name="productDescription">Описание :</string>
    <string name="instruction">Инструкция</string>
    <string name="instructionAttention">Перед употреблением, рекомендуем проконсультироваться с врачом и изучить инструкцию.</string>
    <string name="remainQuestions">Остались вопросы?</string>
    <string name="askPharmacist">Спроси фармацевта!</string>
    <string name="productImageDiffDescription">Внешний вид упаковки может отличаться от фотографии</string>
    <string name="analoguesAndMain">Аналоги и основное действующее вещетсво</string>
    <string name="productCategory">Категория</string>
    <string name="findInPharmacies">Найти в аптеках</string>
    <string name="expectSoonMock">Ожидайте в ближайшее время</string>
    <string name="noGoodsFoundTitle">Ой, кажется такого товара\nнет в нашей базе</string>
    <string name="noGoodsFoundSubtitle">Повторите поиск или попробуйте\nнайти другой препарат</string>
    <string name="noGoodsFoundImageContentDescription">Товар не найден</string>
    <string name="chooseDrugstoreCart">Выбрать аптеку</string>
    <string name="scanDrugsContentDescription">Сканировать товар</string>
    <string name="countProducts">Найдено %d товара(ов)</string>
    <string name="sort">Сортировать</string>
    <string name="analyzeTitleContentDescriptionHome">Анализы и диагностика</string>
    <string name="attachment_image">Изображение</string>
    <string name="attachment_product">Продукт</string>
    <string name="endChatMessage">У Вас есть еще какие либо вопросы?</string>
    <string name="chatEndedTitle">Чат завершен</string>
    <string name="chatEndedMessage">Благодарим за использования нашего сервиса! Оставайтесь здоровыми</string>
    <string name="appNameShort">Pulse</string>
    <string name="seach">Поиск</string>
    <string name="have_questions">Есть вопросы?</string>
    <string name="rating">Рейтинг</string>
    <string name="recommendations">Рекомендации</string>
    <string name="opened_chats">Открытых чатов</string>
    <string name="income_statistic">Статистика дохода</string>
    <string name="today_title">Сегодня</string>
    <string name="week_title">Неделя</string>
    <string name="month_title">Месяц</string>
    <string name="recommendation_holder">%d 💊</string>
    <string name="opened_chats_holder">%d 💬</string>
    <string name="cancel">Отмена</string>
    <string name="common_permissionDialog_settingsButton">Настройки</string>
    <string name="language">Язык</string>
    <string name="language_en">English</string>
    <string name="language_ru">Русский</string>
    <string name="language_ua">Українська</string>
    <string name="language_kz">Қазақ</string>
    <string name="language_uz">Узбекский</string>
    <string name="tryAgain">Попробовать снова</string>
</resources>