<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <ImageView
        android:layout_width="@dimen/_164sdp"
        android:layout_height="@dimen/_164sdp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/main_icon" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/titleEmptyContainer"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:textColor="@color/darkBlue"
        android:textStyle="bold"
        tools:text="@string/noGoodsFoundTitle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subtitleEmptyContainer"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:gravity="center"
        android:textColor="@color/darkBlue"
        tools:text="@string/noGoodsFoundSubtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/actionEmptyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:backgroundTint="@color/primaryBlue"
        android:gravity="center"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:textColor="@color/colorGlobalWhite"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/_16sdp"
        tools:text="@string/chooseDrugstoreCart" />

</merge>