<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/_16sdp"
    tools:context=".components.main.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/_64sdp"
        android:layout_height="@dimen/_64sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/mtv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_title"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/welcomeBackAuth"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textColor="@color/darkBlue"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mtv_sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:gravity="center"
        android:text="@string/pleaseAuth"
        android:textAppearance="?attr/textAppearanceBody1"
        android:textColor="@color/darkBlue"
        app:layout_constraintBottom_toTopOf="@+id/til_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/TextInputAuthStyle"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:nextFocusDown="@+id/til_password"
        android:paddingTop="@dimen/_8sdp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/grey"
        app:errorEnabled="true"
        app:errorTextColor="@android:color/holo_red_light"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailHintAuth"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="?attr/textAppearanceBody2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/TextInputAuthStyle"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grey"
        app:errorEnabled="true"
        app:errorTextColor="@android:color/holo_red_light"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textAppearance="?attr/textAppearanceBody2" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_default_ripple_selector_rect"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_4sdp"
        android:paddingVertical="@dimen/_4sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/_12sdp"
            android:duplicateParentState="true"
            android:text="@string/signIn"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            android:textColor="@color/selector_text_button" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_42sdp"
            android:layout_height="@dimen/_42sdp"
            android:background="@drawable/selector_round_button"
            android:duplicateParentState="true"
            android:padding="@dimen/_12sdp"
            android:rotation="180"
            android:src="@drawable/ic_arrow_back" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>